# Weekings

./: .gitignore
client/: package-lock.json  package.json
client/src/: App.js  Feed.js  Friends.js  Group.js  Groups.js  Hello.js  LoginPage.js  Navbar.js  Post.js  Profile.js  Wall.js  api.js
client/src/context/: AuthContext.js
client/src/hooks/: useAuth.js  useFetch.js
client/src/styles/: login.css  navbar.css
manual_db_data_handler/: badges.py  categories.py  db.py
server/: Cargo.toml
server/src/: main.rs
weeking/: .env  .gitignore  Cargo.toml
weeking/src/: lib.rs  main.rs  state.rs
weeking/src/database/: badge.rs  badge_list.rs  category.rs  category_list.rs  group.rs  group_list.rs  mod.rs  post.rs  post_list.rs  quest.rs  quest_list.rs  repository.rs  user.rs  user_list.rs
weeking/src/routes/: friends.rs  group_profile.rs  groups.rs  mod.rs  profile.rs
