[package]
name = "weeking"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-identity = "0.6.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = "4.3.1"
derive-error = "0.0.5"
dotenv = "0.15.0"
mongodb = "2.8.2"
serde = { version = "1.0.197", features = ["derive"] }
shuttle-actix-web = "0.43.0"
shuttle-runtime = "0.43.0"
tokio = "1.26.0"
